sinc manual 2023-05-24 Pedro y Francisco